name:                ros2nix
version:             0.1.0.0
synopsis:            Build Nix definitions of a ROS distribution
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
-- copyright:           
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable ros2nix
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       process,
                       containers,
                       hxt >= 9.3 && < 9.4,
                       text,
                       lens >= 4.13 && < 4.14,
                       yaml-light >= 0.1 && < 0.2,
                       yaml-light-lens >= 0.3 && < 0.4,
                       hnix >= 0.2 && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010